fixed listing of uneven brandlists in all pages

--- a/_sass/responsiveness.scss
+++ b/_sass/responsiveness.scss
@@ -16,10 +16,9 @@
         border: solid 1px;
         transform: rotate(45deg);
         position: absolute;
-        top: -15px;
+        bottom: -15px;
         left: 10%;
         z-index: 2;
-        top: -16px;
         background-color: white;
     }
   }
@@ -33,10 +32,9 @@
       border: solid 1px;
       transform: rotate(45deg);
       position: absolute;
-      top: -15px;
       left: 86%;
       z-index: 2;
-      top: -16px;
+      bottom: -16px;
       background-color: white;
     }
   }
@@ -46,7 +44,7 @@
   #professionalità {
     justify-content: space-around;
     margin: 5rem 0;
-    
+
     .handshake {
       transform: scale(1.5);
     }
